--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,6 @@
 *::before,
 *::after {
     box-sizing: border-box;
-}
-
-html {
     scroll-behavior: smooth;
 }
 
